add component tabs

--- a/src/components/parabola/index.less
+++ b/src/components/parabola/index.less
@@ -1,8 +1,10 @@
+@import '../common/styles/var.less';
+
 .parabola {
   width: 20rpx;
   height: 20rpx;
   border-radius: 10rpx;
-  background-color: red;
+  background-color: @red;
   position: fixed;
   z-index: 10000;
 }
