--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -3,3 +3,15 @@
   width: 0;
   color: transparent;
 }
+
+.container {
+  height: 100%;
+}
+
+.tabs {
+  border-bottom: 1rpx solid #e8e8e8;
+}
+
+.tab-item {
+  height: 600rpx;
+}
