--- a/src/components/popup/index.wxml
+++ b/src/components/popup/index.wxml
@@ -1,10 +1,10 @@
-<view class="popup__mask" wx:if="{{ inited && mask || maskClosable }}" hidden="{{ hidden }}" catch:touchmove="noop" catch:tap="bindTapMask" style="{{ animationStyle.mask }}z-index:{{ zIndex - 1 }};position:{{ fixed ? 'fixed' : 'absolute' }};background-color:{{ maskColor }};{{ maskStyle }}"></view>
+<view class="popup__mask mask-class" wx:if="{{ inited && mask || maskClosable }}" hidden="{{ hidden }}" catch:touchmove="noop" catch:tap="bindTapMask" style="{{ animationStyle.mask }}z-index:{{ zIndex - 1 }};position:{{ fixed ? 'fixed' : 'absolute' }};background-color:{{ maskColor }};{{ maskStyle }}"></view>
 <view 
-  class="custom-class popup__content popup__content--{{ position }}" 
+  class="popup__content popup__content--{{ position }} custom-class" 
   bind:animationend="bindAnimationend"
   catch:touchmove="{{ forbidScroll ? 'noop' : '' }}"
   wx:if="{{ inited }}" 
   hidden="{{ hidden }}" 
-  style="{{ animationStyle.content }}z-index:{{ zIndex }};position:{{ fixed ? 'fixed' : 'absolute' }};">
+  style="{{ animationStyle.content }}z-index:{{ zIndex }};position:{{ fixed ? 'fixed' : 'absolute' }};{{ popupStyle }}">
   <slot></slot>
 </view>
