--- a/src/components/popup/index.less
+++ b/src/components/popup/index.less
@@ -9,7 +9,7 @@
 
   &__content {
     position: fixed;
-    animation: 0ms;
+    background-color: #FFFFFF;
   }
 
   &__content--center {
@@ -47,7 +47,6 @@
   }
 
 }
-
 
 @keyframes fade-enter {
   from {
