--- a/src/components/popup/index.wxml
+++ b/src/components/popup/index.wxml
@@ -2,9 +2,9 @@
 <view 
   class="popup__content popup__content--{{ position }} custom-class" 
   bind:animationend="bindAnimationend"
-  catch:touchmove="{{ forbidScroll ? 'noop' : '' }}"
+  catch:touchmove="{{ preventScroll ? 'noop' : '' }}"
   wx:if="{{ inited }}" 
   hidden="{{ hidden }}" 
-  style="{{ animationStyle.content }}z-index:{{ zIndex }};position:{{ fixed ? 'fixed' : 'absolute' }};{{ popupStyle }}">
+  style="{{ animationStyle.content }}z-index:{{ zIndex }};position:{{ fixed ? 'fixed' : 'absolute' }};{{ contentStyle }}">
   <slot></slot>
 </view>
