--- a/src/pages/prizewheel/index.wxml
+++ b/src/pages/prizewheel/index.wxml
@@ -1,3 +1,3 @@
-<view class="container">
+<view class="prizewheel-page">
   <prizewheel duration="{{4000}}" dataList="{{prizeDataList}}" />
 </view>
