add component countdown icon

--- a/src/components/popup/index.less
+++ b/src/components/popup/index.less
@@ -1,7 +1,9 @@
-@import "../styles/_var.less";
+@import '../common/styles/var.less';
+
 .ui-popup {
   position: fixed;
-  
+  background-color: @white;
+
   &__mask {
     position: fixed;
     left: 0;
