--- a/src/components/swipeout/index.less
+++ b/src/components/swipeout/index.less
@@ -1,28 +1,29 @@
 @import '../common/styles/var.less';
 
-.swipeout {
-  position: relative;
+.ui-swipeout {
   overflow: hidden;
 
-  &__content {
-    background-color: @white;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    z-index: 1;
+  &__view {
+    position: relative;
   }
 
   &__left {
     position: absolute;
-    height: 100%;
+    top: 0;
+    bottom: 0;
     left: 0;
+    transform: translateX(-100%);
   }
 
   &__right {
     position: absolute;
-    height: 100%;
+    top: 0;
+    bottom: 0;
     right: 0;
+    transform: translateX(100%);
+  }
+
+  &__content {
+    background-color: @white;
   }
 }
