--- a/src/components/swipeout/index.wxml
+++ b/src/components/swipeout/index.wxml
@@ -1,11 +1,13 @@
-<view class="swipeout custom-class">
-  <view class="swipeout__left" catch:tap="noop">
-    <slot name="left"></slot>
-  </view>
-  <view class="swipeout__content" bind:tap="close" bind:touchstart="{{ disabled ? '' : 'bindTouchStart' }}" bind:touchmove="{{ disabled ? '' : 'bindTouchMove' }}" bind:touchend="{{ disabled ? '' : 'bindTouchEnd' }}" style="-webkit-transform:translateX({{ -offsetX }}px);transform:translateX({{ -offsetX }}px);{{ touchMoving ? '' : 'transition:transform ' + transitionDration + 'ms;' + '-webkit-transition:transform ' + transitionDration + 'ms;'  }}">
-    <slot></slot>
-  </view>
-  <view class="swipeout__right" catch:tap="noop">
-    <slot name="right"></slot>
+<view class="ui-swipeout custom-class">
+  <view class="ui-swipeout__view" bind:touchstart="{{ disabled ? '' : 'bindTouchStart' }}" bind:touchmove="{{ disabled ? '' : 'bindTouchMove' }}" bind:touchend="{{ disabled ? '' : 'bindTouchEnd' }}" style="-webkit-transform:translateX({{ -offsetX }}px);transform:translateX({{ -offsetX }}px);{{ touchMoving ? '' : 'transition:transform ' + transitionDration + 'ms;' + '-webkit-transition:transform ' + transitionDration + 'ms;'  }}">
+    <view class="ui-swipeout__left">
+      <slot name="left"></slot>
+    </view>
+    <view class="ui-swipeout__content" bind:tap="close">
+      <slot></slot>
+    </view>
+    <view class="ui-swipeout__right">
+      <slot name="right"></slot>
+    </view>
   </view>
 </view>
