--- a/src/components/switch/index.wxml
+++ b/src/components/switch/index.wxml
@@ -1,5 +1,8 @@
-<view bind:tap="bindTap" class="switch switch--{{checked?'on':'off'}} {{disabled?'switch--disabled':''}} custom-class" style="font-size:{{size}};">
+<view 
+  bind:tap="bindTap" 
+  class="switch switch--{{ checked ? 'on' : 'off' }} {{ disabled ? 'switch--disabled' : '' }} custom-class" 
+  style="font-size:{{size}};">
   <view class="switch__node node-class">
-    <loading wx:if="{{loading}}" size="50%" custom-class="switch__loading" />
+    <ui-loading wx:if="{{loading}}" size="50%" custom-class="switch__loading" />
   </view>
 </view>
