--- a/src/components/stepper/index.less
+++ b/src/components/stepper/index.less
@@ -1,6 +1,6 @@
 @import '../common/styles/var.less';
 
-.stepper {
+.ui-stepper {
   background: @white;
   border: 1px solid @border-color;
   border-radius: 4px;
