--- a/src/pages/popup/index.wxml
+++ b/src/pages/popup/index.wxml
@@ -1,12 +1,10 @@
-<view class="popup-page">
-  <view class="demo-block">
-    <view class="demo-block__title">基础用法</view>
+<view class="container">
+  <demo-block title="基础用法">
     <view>
       <button data-position="center" bind:tap="toggle">居中弹出popup</button>
     </view>
-  </view>
-  <view class="demo-block">
-    <view class="demo-block__title">弹出位置</view>
+  </demo-block>
+  <demo-block title="弹出位置">
     <view>
       <button data-position="bottom" bind:tap="toggle">底部弹出</button>
       <button data-position="top" bind:tap="toggle">顶部弹出</button>
@@ -14,13 +12,12 @@
       <button data-position="left" bind:tap="toggle">左侧弹出</button>
       <button data-position="customPosition" bind:tap="toggle">自定义位置弹出popup</button>
     </view>
-  </view>
-  <view class="demo-block">
-    <view class="demo-block__title">自定义动画</view>
+  </demo-block>
+  <demo-block title="自定义动画">
     <view>
       <button data-position="customAnimation" bind:tap="toggle">自定义动画弹出</button>
     </view>
-  </view>
+  </demo-block>
   <popup data-position="center" bind:close="toggle" show="{{centerShow}}">
     <view class="popup-slot">content</view>
   </popup>
