--- a/src/pages/swipeout/index.wxml
+++ b/src/pages/swipeout/index.wxml
@@ -1,12 +1,11 @@
-<view class="swipeout-page">
-  <view class="demo-block">
-    <view class="demo-block__title">基础用法</view>
+<view class="container">
+  <demo-block title="基础用法">
     <view>
-      <swipeout custom-class="swipeout" status="{{swipeStatus}}" leftWidth="{{80}}" rightWidth="{{80}}">
+      <ui-swipeout custom-class="swipeout" status="{{swipeStatus}}" leftWidth="{{80}}" rightWidth="{{80}}">
         <view class="swipeout-left" slot="left">隐藏</view>
         <view class="swipeout-content">单元格</view>
         <view class="swipeout-right" slot="right">删除</view>
-      </swipeout>
+      </ui-swipeout>
     </view>
-  </view>
+  </demo-block>
 </view>
