add component dialog

--- a/src/components/dialog/index.less
+++ b/src/components/dialog/index.less
@@ -17,12 +17,13 @@
     padding: 40rpx 30rpx;
     font-size: 28rpx;
     line-height: 38rpx;
+    text-align: center;
   }
 
   &__close-icon {
     position: absolute;
     top: 10rpx;
-    right: 20rpx;
+    right: 10rpx;
   }
 
   &__footer {
