--- a/src/app.wxss
+++ b/src/app.wxss
@@ -65,13 +65,6 @@ page {
   border-width: 1rpx;
 }
 
-.demo-block {
-  padding: 0 30rpx;
-}
-
-.demo-block__title {
-  margin: 0;
-  font-size: 34rpx;
-  color: rgba(69, 90, 100, .6);
-  padding: 40rpx 0 30rpx;
+button {
+  display: inline-block;
 }
