--- a/src/components/icon/index.wxml
+++ b/src/components/icon/index.wxml
@@ -1,4 +1,4 @@
 <text 
   class="ui-icon iconfont icon-{{ name }} custom-class" 
   bindtap="bindTap" 
-  style="display:inline-block;color:{{ color }};font-size:{{ size }};{{ customStyle }}" />
+  style="display:inline-block;{{ color ? 'color:' + color : '' }};font-size:{{ size }};{{ customStyle }}" />
