--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -1,27 +1,3 @@
 .container {
-  padding-top: 80rpx;
-
-  .cate-section {
-    background-color: #ffffff;
-    line-height: 100rpx;
-    margin-bottom: 30rpx;
-    border-radius: 5rpx;
-
-    .cate-title {
-      font-size: 34rpx;
-      padding: 0 20rpx;
-      padding-left: 20rpx;
-      font-weight: bold;
-    }
-
-    .component-items {
-      .component-item {
-        padding-left: 20rpx;
-
-        &--hover {
-          background-color: #eee;
-        }
-      }
-    }
-  }
+  padding: 80rpx 0;
 }
