--- a/src/pages/dashboard/index.wxml
+++ b/src/pages/dashboard/index.wxml
@@ -1,10 +1,5 @@
 <view class="container">
-  <view class="cate-section" wx:for="{{cateList}}" wx:key="index" wx:for-item="cateItem">
-    <view class="cate-title hairline--bottom">{{cateItem.name}}</view>
-    <view class="component-items">
-      <view data-url="{{item.path}}" bind:tap="jumpUrl" hover-class="component-item--hover" class="component-item" wx:for="{{cateItem.items}}" wx:key="index">
-        <view class="{{ index < cateItem.items.length-1 ? 'hairline--bottom':'' }}">{{item.name}}</view>
-      </view>
-    </view>
-  </view>
+  <ui-cell-group border wx:for="{{ cateList }}" wx:key="index" wx:for-item="cateItem" title="{{ cateItem.name }}">
+    <ui-cell wx:for="{{cateItem.items}}" wx:key="index" size="large" title="{{ item.name }}" is-link url="{{ item.path }}" />
+  </ui-cell-group>
 </view>
