--- a/src/pages/transition/index.less
+++ b/src/pages/transition/index.less
@@ -1,12 +1,20 @@
 .container {
-  padding: 100rpx;
+  position: relative;
+
+  .box-c {
+    position: absolute;
+    top: calc(50% - 100rpx);
+    left: calc(50% - 100rpx);
+  }
+
+  .box {
+    width: 200rpx;
+    height: 200rpx;
+    background: red;
+  }
 }
 
-.box {
-  width: 200rpx;
-  height: 200rpx;
-  background: red;
-}
+
 
 .slide-fade-enter-active {
   transition: all .2s ease;
