--- a/src/pages/countdown/index.less
+++ b/src/pages/countdown/index.less
@@ -1,9 +1,9 @@
 .container .countdown {
-  .unit {
+  .ui-countdown__unit {
     color: red;
   }
 
-  .digit {
+  .ui-countdown__digit {
     color: #fff;
     background: black;
     padding: 5rpx 8rpx;
