--- a/src/components/tabs/index.less
+++ b/src/components/tabs/index.less
@@ -1,47 +1,6 @@
 @import '../common/styles/var.less';
 
-.tabs {
+.ui-tabs {
 
-  &__nav {
-    height: 100rpx;
-    box-sizing: content-box;
-    border-bottom: 1rpx solid @border-color;
-  }
-
-  &__nav-track {
-    display: flex;
-    flex-wrap: nowrap;
-    height: 100rpx;
-    position: relative;
-  }
-
-  &__nav-line {
-    position: absolute;
-    height: 4rpx;
-    bottom: 0rpx;
-    background-color: @red;
-  }
-
-  &__nav-item {
-    flex: 1;
-    text-align: center;
-    line-height: 100rpx;
-  }
-
-  &__nav-text {
-    color: @text-color;
-  }
-
-  &__nav-text--active {
-    color: @red;
-  }
-
-  &__content {
-    width: 100%;
-    overflow: hidden;
-  }
-
-  &__content-track {
-    display: flex;
-  }
+  
 }
