--- a/src/components/tabs/index.less
+++ b/src/components/tabs/index.less
@@ -3,6 +3,7 @@
 .ui-tabs {
   width: 100%;
   height: auto;
+  -webkit-tap-highlight-color: transparent;
 
   &__header {
     width: 100%;
@@ -18,6 +19,7 @@
     display: flex;
     position: relative;
     box-sizing: content-box;
+    user-select: none;
   }
 
   &__scroll-thumb {
