--- a/src/pages/tabs/index.less
+++ b/src/pages/tabs/index.less
@@ -1,5 +1,10 @@
 .container {
-  height: 2000rpx;
-  padding-top: 100rpx;
-  background-color: white;
+  height: 3000rpx;
+
+  .box {
+    height: 160rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
